Setting up aspectj for m2e, fixing tests and correcting bug discovered in test. Completing the MockContentStore, and removing dependencies on exist